auto generate swagger doc commad added in dev
