# src/v1/user/graphql-apis/user.types.ts
@@ -1,10 +1,9 @@
 import { ObjectType, Field } from "type-graphql";
 import { User } from "../user.schema";
-
-import { Ilist } from "../user.interface";
+import { IUserList } from "../user.interface";
 
 @ObjectType()
-export class UserList implements Ilist {
+export class UserList implements IUserList {
   @Field(() => [User]) results?: [];
   @Field({ nullable: true }) page?: number;
   @Field({ nullable: true }) limit?: number;
